add spotify play box

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -562,6 +562,9 @@ main {
 
 .service-content-box { text-align: center; }
 
+.player_box { margin-bottom: 10px; }
+
+
 .service-item-title { 
   color: #5F9595;
   margin-bottom: 7px; 
